--- a/templates/about.html
+++ b/templates/about.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
- <meta charset="UTF-8">
- <title>My Website - About</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="{{url_for('static', filename='css/app.css')}}" />
+    <title>My Website - About</title>
 </head>
 <body>
- <h1>Martin Bartley</h1>
- <p>My name is Martin Bartley. I am a second year Computer Science student at the Universiy of the West Indies. I am a WebDev Superstar.</p>
+    <img src="{{url_for('static', filename='9729-bleach-kurosaki-ichigo-hollow-ichigo-hollow-mask-748x468.png')}}">
+    <h1>Martin Bartley</h1>
+    <p>My name is Martin Bartley. I am a second year Computer Science student at the Universiy of the West Indies. I am a WebDev Superstar.</p>
 </body>
 </html>
